unpackaged/main/default/objects/BLND_DFDT_Resource__c/BLND_DFDT_Resource__c.object-meta.xml
<CustomObject>
	<label>DreamTeam Resource</label>
	<nameField>
		<label>Resource Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>DreamTeam Resources</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>