unpackaged/main/default/objects/BLND_DFDT_Resource__c/fields/BLND_Approval__c.field-meta.xml
<CustomField>
	<fullName>BLND_Approval__c</fullName>
	<label>Approval</label>
	<length>32000</length>
	<type>LongTextArea</type>
</CustomField>