unpackaged/main/default/objects/BLND_DFDT_Resource__c/fields/BLND_Cost_Per_Day__c.field-meta.xml
<CustomField>
	<fullName>BLND_Cost_Per_Day__c</fullName>
	<label>Cost Per Day</label>
	<precision>18</precision>
	<scale>2</scale>
	<type>Currency</type>
</CustomField>