unpackaged/main/default/objects/BLND_DFDT_Resource__c/fields/BLND_Overtime_Rate__c.field-meta.xml
<CustomField>
	<fullName>BLND_Overtime_Rate__c</fullName>
	<label>Overtime Rate</label>
	<precision>18</precision>
	<scale>2</scale>
	<type>Currency</type>
</CustomField>