unpackaged/main/default/objects/BLND_DFDT_Resource__c/fields/BLND_Skill_Certification__c.field-meta.xml
<CustomField>
	<fullName>BLND_Skill_Certification__c</fullName>
	<label>Skill Certification</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Cisco Certified Internetwork Expert</fullName>
			</value>
			<value>
				<fullName>Certified Lotus Professional</fullName>
			</value>
			<value>
				<fullName>Certified Lotus Specialist</fullName>
			</value>
			<value>
				<fullName>Certified Novell Administrator</fullName>
			</value>
			<value>
				<fullName>Certified Novell Engineer</fullName>
			</value>
			<value>
				<fullName>Certified Solaris Administrator</fullName>
			</value>
			<value>
				<fullName>Microsoft Certified Database Administrator</fullName>
			</value>
			<value>
				<fullName>Microsoft Certified Professional</fullName>
			</value>
			<value>
				<fullName>Microsoft Certified Solutions Developer</fullName>
			</value>
			<value>
				<fullName>Microsoft Certified Systems Engineer</fullName>
			</value>
			<value>
				<fullName>Novell Certified Internet Professional</fullName>
			</value>
			<value>
				<fullName>Oracle Certified Professional</fullName>
			</value>
			<value>
				<fullName>Project Management Professional</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>