unpackaged/main/default/objects/BLND_DFDT_Resource__c/fields/BLND_Skill_Level__c.field-meta.xml
<CustomField>
	<fullName>BLND_Skill_Level__c</fullName>
	<label>Skill Level</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>None</fullName>
			</value>
			<value>
				<fullName>Beginner</fullName>
			</value>
			<value>
				<fullName>Intermediate</fullName>
			</value>
			<value>
				<fullName>Advanced</fullName>
			</value>
			<value>
				<fullName>Expert</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>