unpackaged/main/default/objects/BLND_DFDT_Resource__c/fields/BLND_Skill_Set__c.field-meta.xml
<CustomField>
	<fullName>BLND_Skill_Set__c</fullName>
	<label>Skill Set</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>None</fullName>
			</value>
			<value>
				<fullName>Auditor</fullName>
			</value>
			<value>
				<fullName>Business Analyst</fullName>
			</value>
			<value>
				<fullName>Consultant</fullName>
			</value>
			<value>
				<fullName>Customer Relations</fullName>
			</value>
			<value>
				<fullName>Database Administrator</fullName>
			</value>
			<value>
				<fullName>Developer</fullName>
			</value>
			<value>
				<fullName>Lead Developer</fullName>
			</value>
			<value>
				<fullName>Engineer</fullName>
			</value>
			<value>
				<fullName>Lead Engineer</fullName>
			</value>
			<value>
				<fullName>Network Administrator</fullName>
			</value>
			<value>
				<fullName>Project Manager</fullName>
			</value>
			<value>
				<fullName>Senior Consultant</fullName>
			</value>
			<value>
				<fullName>Senior Database Administrator</fullName>
			</value>
			<value>
				<fullName>Senior Developer</fullName>
			</value>
			<value>
				<fullName>Task Manager</fullName>
			</value>
			<value>
				<fullName>Technical Architect</fullName>
			</value>
			<value>
				<fullName>Technical Lead</fullName>
			</value>
			<value>
				<fullName>Web Master</fullName>
			</value>
			<value>
				<fullName>Technical Writer</fullName>
			</value>
			<value>
				<fullName>QA Engineer</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>